--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "pymongo (>=4.12.0,<5.0.0)",
     "mongoose (>=0.0.1,<0.0.2)",
     "dotenv (>=0.9.9,<0.10.0)",
-    "beanie (>=1.29.0,<2.0.0)"
+    "beanie (>=1.29.0,<2.0.0)",
+    "pydantic (>=2.11.3,<3.0.0)"
 ]
 
 [tool.poetry]
